# license-markdown-table

./: .bandit  .flake8  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
license_markdown_table/: __init__.py  license_markdown_table.py
tests/: conftest.py  test_license_markdown_table.py
