[tool.poetry]
name = "license-markdown-table"
version = "0.1.0"
description = "Gathers project dependencies and creates a markdown table with license information for each package."
authors = ["szmyty <szmyty@gmail.com>"]
repository = "https://github.com/szmyty/license-markdown-table"
readme = "README.md"
keywords = ["license", "markdown"]

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.3.0"
py-markdown-table = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py36", "py37", "py38", "py39"]
include_trailing_comma = false
include = '\.pyi?$'

[tool.isort]
profile = "black"
skip = "venv"
balanced_wrapping = true
atomic = true